--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "typescript": "~3.7.2"
   },
   "eslintConfig": {
-    "extends": ["react-app", "plugin:prettier/recommended"]
+    "extends": [
+      "react-app",
+      "plugin:prettier/recommended"
+    ]
   },
   "browserslist": {
     "production": [
